[tool.poetry]
name = "selenium_test"
version = "0.1.0"
description = "A test environment"
authors = ["HBDanks <danksharold@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pendulum = "^2.1.2"
PyYAML = "^5.4.1"
selenium = "^3.141.0"
pandas = "^1.3.2"
matplotlib = "^3.4.3"
dataset = "^1.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
